<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginVertical="60dp"
        android:layout_marginHorizontal="30dp">


        <Spinner
            android:id="@+id/bibliotecaSpinner"
            android:layout_width="fill_parent"
            android:layout_height="40dp"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:background="@android:drawable/btn_dropdown"
            android:spinnerMode="dropdown"
            android:textSize="20sp"/>

        <Spinner
            android:id="@+id/zonaSpinner"
            android:layout_width="fill_parent"
            android:layout_height="40dp"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:background="@android:drawable/btn_dropdown"
            android:spinnerMode="dropdown"
            android:textSize="20sp"/>


        <DatePicker
            android:id="@+id/datePicker"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:datePickerMode="spinner"
            android:calendarViewShown="false"/>


        <Button
            android:id="@+id/cercaButton"
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:backgroundTint="#146DDA"
            android:textColor="@color/white"
            android:text="Cerca"
            android:textSize="20sp" />


    </LinearLayout>


</LinearLayout>