<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="10dp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginTop="20dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/posizioneTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="E.R. Caianiello, Sala 1"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/dataTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="60dp"
            android:text="01/01/2021"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:gravity="right"
                android:text="Postazione:"
                android:textSize="25dp" />

            <Spinner
                android:id="@+id/postazioneSpinner"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@android:drawable/btn_dropdown"
                android:spinnerMode="dropdown"
                android:textSize="25dp"
                android:verticalScrollbarPosition="right" />

        </LinearLayout>

        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="30dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:gravity="right"
                android:text="Orario:"
                android:textSize="25dp" />

            <Spinner
                android:id="@+id/orarioSpinner"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@android:drawable/btn_dropdown"
                android:spinnerMode="dropdown"
                android:textSize="25dp"
                android:verticalScrollbarPosition="right" />

        </LinearLayout>

        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="200dp" />

        <Button
            android:id="@+id/confermaPrenotazioneButton"
            android:layout_width="200dp"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:backgroundTint="#146DDA"
            android:textColor="@color/white"
            android:text="Conferma"
            android:textSize="20sp" />

    </LinearLayout>

</RelativeLayout>