...
            android:drawableLeft="@drawable/bookstack"
            android:textColor="@color/white"
            android:text="Prestito Libri"
            android:textSize="13sp" />

        <Button
            android:id="@+id/svcPrenotazioneButton"
            android:layout_width="fill_parent"
            android:layout_height="150dp"
            android:layout_margin="4dp"
            android:layout_weight="1"
            android:backgroundTint="#146DDA"
            android:textColor="@color/white"
            android:drawableLeft="@drawable/desk"
            android:text="Prenota Posto"
            android:textSize="13sp" />

    </LinearLayout>

    <Button
        android:layout_width="match_parent"
...
